# gis

./: .buildinfo  .gitignore  .travis.yml  CMakeLists.txt  COPYING  Jenkinsfile  README.md  accessors.html  conversions.html  genindex.html  getting_started.html  index.html  intro.html  measurements.html  objects.inv  py-modindex.html  relationships.html  search.html  searchindex.js  spatial_ref_sys.html  tarantool-gis-scm-1.rockspec  transformations.html  types.html
_sources/: getting_started.txt  intro.txt  measurements.txt  spatial_ref_sys.txt  types.txt
arch/: PKGBUILD
cmake/: FindGEOS.cmake  FindPROJ.cmake
debian/: .gitignore  changelog  control  prebuild.sh  rules  tarantool-gis-doc.install.in  tarantool-gis.install.in
doc/: .gitignore  CMakeLists.txt  accessors.rst  conf.py  conversions.rst  index.rst  relationships.rst  transformations.rst
examples/: basic.lua  knn.lua
gis/: .gitignore  CMakeLists.txt  ST.lua  init.lua  lib.c  lib.h  projection.lua  wkb.lua  wkt.lua
gis/data/: .gitignore
rockspecs/: gis-1.0.0-1.rockspec  gis-scm-1.rockspec
rpm/: tarantool-gis.spec
tests/: CMakeLists.txt  PostOfficesMsk.json  geometry.test.lua  geometrycollection.test.lua  linearring.test.lua  linestring.test.lua  multilinestring.test.lua  multipoint.test.lua  multipolygon.test.lua  point.test.lua  polygon.test.lua  projection.test.lua  rtree.test.lua
